<resources>
    <string name="app_name">Cosmic-ESP</string>
    <string name="toast_message">Toast message</string>
    <string name="ok">OK</string>
    <string name="dialog_message">Dialog message</string>
    <string name="stop_cheats">Stop Cheats</string>
    <string name="stop_cheat">Stop Cheat</string>
    <string name="start_cheat">Start Cheat</string>
    <string name="global_version">Global version</string>
    <string name="india_version">India version</string>
    <string name="vietnam_version">Vietnam version</string>
    <string name="korea_version">Korea version</string>
    <string name="taiwan_version">Taiwan version</string>
    <string name="pubgm_version">PUBGM version:</string>
    <string name="name">Name</string>
    <string name="distance">Distance</string>
    <string name="health">Health</string>
    <string name="team_id">Team ID</string>
    <string name="box">Box</string>
    <string name="radar_line">Radar line</string>
    <string name="skeleton">Skeleton</string>
    <string name="weapon">Weapon</string>
    <string name="count">Count</string>
    <string name="_360_warning">360 warning</string>
    <string name="head_dots">Head dots</string>
    <string name="grenade_alert">Grenade alert</string>
    <string name="frame_rate">Frame rate</string>
    <string name="helmet_lv_1">Helmet Lv 1</string>
    <string name="helmet_lv_2">Helmet Lv 2</string>
    <string name="helmet_lv_3">Helmet Lv 3</string>
    <string name="vest_lv_1">Vest Lv 1</string>
    <string name="vest_lv_2">Vest Lv 2</string>
    <string name="vest_lv_3">Vest Lv 3</string>
    <string name="bagpack_lv_1">Bagpack Lv 1</string>
    <string name="bagpack_lv_2">Bagpack Lv 2</string>
    <string name="bagpack_lv_3">Bagpack Lv 3</string>
    <string name="pan">Pan</string>
    <string name="sockle">Sockle</string>
    <string name="crowbar">Crowbar</string>
    <string name="machete">Machete</string>
    <string name="adrenalline">Adrenalline</string>
    <string name="paintkiller">Painkiller</string>
    <string name="energydrink">EnergyDrink</string>
    <string name="bandage">Bandage</string>
    <string name="firstaidkit">FirstAidKit</string>
    <string name="medkit">MedKit</string>
    <string name="_2x_scope">2x Scope</string>
    <string name="_4x_scope">4x Scope</string>
    <string name="_3x_scope">3x Scope</string>
    <string name="_6x_scope">6x Scope</string>
    <string name="_8x_scope">8x Scope</string>
    <string name="holo">Holo</string>
    <string name="lazer">RedDot</string>
    <string name="_5_56mm">5.56mm</string>
    <string name="_7_62mm">7.62mm</string>
    <string name="_300_magnum">.300 Magnum</string>
    <string name="_99mm">99mm</string>
    <string name="_45_acp">.45 ACP</string>
    <string name="_12_gauge">12 Gauge</string>
    <string name="extended">Extended</string>
    <string name="extended_quickdraw">Extended Quickdraw</string>
    <string name="quickdraw">Quickdraw</string>
    <string name="compensator">Compensator</string>
    <string name="flashhider">FlashHider</string>
    <string name="suppressor">Suppressor</string>
    <string name="smoke">Smoke</string>
    <string name="grenade">Grenade</string>
    <string name="molotov">Molotov</string>
    <string name="flashbang">Flashbang</string>
    <string name="angled_foregrip">Angled Foregrip</string>
    <string name="thumb_grip">Thumb Grip</string>
    <string name="laser_sight">Laser Sight</string>
    <string name="light_grip">Light Grip</string>
    <string name="half_grip">Half Grip</string>
    <string name="vertical_foregrip">Vertical Foregrip</string>
    <string name="duckbill">DuckBill</string>
    <string name="choke">Choke</string>
    <string name="stock">Stock</string>
    <string name="tactical_stock">Tactical Stock</string>
    <string name="lootbox">LootBox</string>
    <string name="air_drop">Air Drop</string>
    <string name="ghilliesuit">GhillieSuit</string>
    <string name="ump45">UMP45</string>
    <string name="win94">Win94</string>
    <string name="mini14">Mini14</string>
    <string name="mp5k">MP5K</string>
    <string name="vector">Vector</string>
    <string name="uzi">UZI</string>
    <string name="qbu">QBU</string>
    <string name="slr">SLR</string>
    <string name="akm">AKM</string>
    <string name="m16a4">M16A4</string>
    <string name="scar_l">SCAR-L</string>
    <string name="m416">M416</string>
    <string name="groza">Groza</string>
    <string name="aug">AUG</string>
    <string name="qbz">QBZ</string>
    <string name="m762">M762</string>
    <string name="mk47">Mk47</string>
    <string name="_636c">636C</string>
    <string name="kar98k">Kar98k</string>
    <string name="awm">AWM</string>
    <string name="m24">M24</string>
    <string name="sks">SKS</string>
    <string name="vss">VSS</string>
    <string name="mk14">Mk14</string>
    <string name="s686">S686</string>
    <string name="s1897">S1897</string>
    <string name="s12k">S12K</string>
    <string name="dbs">DBS</string>
    <string name="dp_28">DP-28</string>
    <string name="m249">M249</string>
    <string name="p92">P92</string>
    <string name="p1911">P1911</string>
    <string name="r1895">R1895</string>
    <string name="p18c">P18C</string>
    <string name="r45">R45</string>
    <string name="sawed_off">Sawed-off</string>
    <string name="flaregun">FlareGun</string>
    <string name="deserteagle">DesertEagle</string>
    <string name="sickle">Sickle</string>
    <string name="crossbow">CrossBow</string>
    <string name="bolt_action_sniper_rifles">Bolt Action Sniper Rifles</string>
    <string name="automatic_sniper_rifles">Automatic Sniper Rifles</string>
    <string name="smg">SMG</string>
    <string name="shotguns">Shotguns</string>
    <string name="light_machine_gun">Light Machine Gun</string>
    <string name="pistol">Pistol</string>
    <string name="melee">Melee</string>
    <string name="other">Other</string>
    <string name="thompson">Thompson</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string-array name="pubgm_version">
        <item>Global</item>
        <item>Vietnam</item>
        <item>Korea</item>
        <item>Taiwan</item>
    </string-array>
</resources>